--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/server.ts",
   "scripts": {
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
-    "lint:fix": "eslint --fix",
-    "prettier:fix": "prettier --write",
+    "lint:fix": "eslint . --fix",
+    "prettier:fix": "prettier --write.",
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "lint-prettier": "yarn lint:check && yarn prettier:check",
     "test": "echo \"Error: no test specified\" && exit 1",
