--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
     "no-unused-expressions": "warn",
+    "no-console": "warn",
     "no-undef": "error"
   },
 
