--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint": "^8.49.0",
     "express": "^4.18.2",
     "mongoose": "^7.5.2",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
