--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^7.5.2",
     "prettier": "^3.0.3",
     "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "zod": "^3.22.2"
   }
 }
