--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
     "express": "^4.18.2",
+    "http-status": "^1.7.0",
     "mongoose": "^7.5.2",
     "prettier": "^3.0.3",
     "winston": "^3.10.0",
