--- a/package.json
+++ b/package.json
@@ -28,13 +28,19 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/jsonwebtoken": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
     "express": "^4.18.2",
     "http-status": "^1.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "prettier": "^3.0.3",
     "winston": "^3.10.0",
