--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "prettier": "^3.0.3",
+    "rype": "^1.2.6",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.22.2"
